adding new files

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="initial-scale=1">
 <title>Open Miami</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="adaptive-design-demo/media-queries.css">
+
 
 
 </head>
@@ -24,7 +27,7 @@
     </div>
 <!--Add main image here-->
     <div class="image">
-    <!--<img src="images/miami.jpg">-->
+        <img src="images/florida.png">
     </div>
   
  <!--Main Content goes here-->   
@@ -38,141 +41,105 @@
     <div id="apps">
 
 
+
         <h1>Apps</h1>
 
         <ul>
             <h2>Transportation</h2>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
+            <li><a href="#">BusDrone</a> - See the position of Miami busses in real time! Source on GitHub. </li>
+            <li><a href="#">PDXLiveBus</a> - See the position of Dade busses in real time! Source on GitHub </li>
+            <li><a href="#">MetroCuts</a> - Find bike racks and nearby businesses. </li>
+            <li><a href="#">wherecanipark.in</a> - Interpret Miami's Street Parking to determine where you can park. Source on Web App and API on GitHub </li>
         </ul>
 
 
         <ul>
             <h2>Educational/How To</h2>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
+            <li><a href="#">What Do I Do With...?</a> - Allows residents and businesses in Miami-Dade County to find
+                locations to recycle and responsibly dispose of unwanted items. Source on GitHub </li>
         </ul>
 
 
         <ul>
             <h2>Fire/Crime</h2>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
+            <li><a href="#">@miami911twitter bot</a> - Source on GitHub </li>
         </ul>
 
 
         <ul>
             <h2>Food safety/restaurant inspections</h2>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
+            <li><a href="#">Dinegerous</a> - Miami-Dade County Food Inspections </li>
         </ul>
 
 
         <ul>
             <h2>Maps</h2>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
+            <li><a href="#">Miami's Heritage Trees</a> - Code on GitHub Source data </li>
+            <li><a href="#">Map My Districts</a> - Determine if a set of addresses are within a neighborhood or
+                district boundaries by uploading bulk spreadsheets of Seattle addresses or drawing arbitrary polygons. Currently an internal tool for the Miami Chamber of Commerce but may open to the public in the future.
+            </li>
         </ul>
 
 
         <ul>
             <h2>Wikis</h2>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
+            <li><a href="#">MiamiWiki</a> - A community-authored resource for Miami, FL</li>
         </ul>
+        <ul><h2>Help with this section on <a href="https://github.com/hellenlarach/md-data">GitHub.</a> </h2></ul>
 	</div>
     
     <div id="data">
         <h1>Data</h1>
 
         <ul>
-            <h2>Data1</h2>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
+            <h2>State Specific data</h2>
+            <li><a href="#">something goes here</a> - Data page content goes here. Data page content goes here.
+                Data page content goes here. Data page content goes here. </li>
+            <li><a href="#">something goes here</a> - Data page content goes here. Data page content goes here.
+                Data page content goes here. Data page content goes here. </li>
+            <li><a href="#">something goes here</a> - Data page content goes here. Data page content goes here.
+                Data page content goes here. Data page content goes here. </li>
         </ul>
 
 
         <ul>
-            <h2>Data 2</h2>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
+            <h2>State Specific data</h2>
+            <li><a href="#">something goes here</a> - Data page content goes here. Data page content goes here.
+                Data page content goes here. Data page content goes here. </li>
+            <li><a href="#">something goes here</a> - Data page content goes here. Data page content goes here.
+                Data page content goes here. Data page content goes here.</li>
+            <li><a href="#">something goes here</a> - Data page content goes here. Data page content goes here.
+                Data page content goes here. Data page content goes here. </li>
         </ul>
 
 
         <ul>
-            <h2>Data 3</h2>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
+            <h2>State Specific data</h2>
+            <li><a href="#">something goes here</a> - Data page content goes here. Data page content goes here.
+                Data page content goes here. Data page content goes here. </li>
+            <li><a href="#">something goes here</a> - Data page content goes here. Data page content goes here.
+                Data page content goes here. Data page content goes here. </li>
+            <li><a href="#">something goes here</a> - Data page content goes here. Data page content goes here.
+                Data page content goes here. Data page content goes here. </li>
         </ul>
 
 
         <ul>
-            <h2>Data 4</h2>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
+            <h2>State Specific data</h2>
+            <li><a href="#">something goes here</a> - Data page content goes here. Data page content goes here.
+                Data page content goes here. Data page content goes here. </li>
+            <li><a href="#">something goes here</a> - Data page content goes here. Data page content goes here.
+                Data page content goes here. Data page content goes here. </li>
+            <li><a href="#">something goes here</a> - Data page content goes here. Data page content goes here.
+                Data page content goes here. Data page content goes here.</li>
         </ul>
+        <ul><h2>Help with this section on <a href="https://github.com/hellenlarach/md-data">GitHub.</a> </h2></ul>
 
 
-        <ul>
-            <h2>Data 5s</h2>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-        </ul>
 
 
-        <ul>
-            <h2>Data 6</h2>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-            <li><a href="#">something goes here</a> - Apps page content goes here. Apps page content goes here.
-                Apps page content goes here.Apps page content goes here. </li>
-        </ul>
+
+
 	</div>
 	
     <div id="resources">
@@ -181,13 +148,11 @@
         <ul>
             <h2>Census data</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci at corporis, cumque eligendi error
-                facere harum ipsam minima necessitatibus, nisi, ratione rem. Aspernatur dolore doloribus eaque modi
-                quasi reiciendis reprehenderit.</p>
+            <p>Looking for Census data for your project? Check out censusreporter.org, a really pleasant tool for
+                browsing census data. Here's the profile for Miami, FL. Scroll down to see graphs.</p>
 
-            <p>Adipisci alias amet asperiores aut consectetur distinctio dolorum ducimus error expedita, harum id iure
-                iusto laborum minima obcaecati placeat praesentium quasi quidem repudiandae saepe sit totam, ut vero,
-                vitae voluptas?</p>
+            <p>Looking for Census data for your project? Check out censusreporter.org, a really pleasant tool for
+                browsing census data. Here's the profile for Miami, FL. Scroll down to see graphs.</p>
 
         </ul>
 
@@ -195,13 +160,11 @@
         <ul>
             <h2>Geo Data</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci at corporis, cumque eligendi error
-                facere harum ipsam minima necessitatibus, nisi, ratione rem. Aspernatur dolore doloribus eaque modi
-                quasi reiciendis reprehenderit.</p>
+            <p>Looking for Geo data for your project? Check out censusreporter.org, a really pleasant tool for
+                browsing census data. Here's the profile for Miami, FL. Scroll down to see graphs.</p>
 
-            <p>Adipisci alias amet asperiores aut consectetur distinctio dolorum ducimus error expedita, harum id iure
-                iusto laborum minima obcaecati placeat praesentium quasi quidem repudiandae saepe sit totam, ut vero,
-                vitae voluptas?</p>
+            <p>Looking for Geo data for your project? Check out censusreporter.org, a really pleasant tool for
+                browsing census data. Here's the profile for Miami, FL. Scroll down to see graphs.</p>
 
         </ul>
 
@@ -209,13 +172,11 @@
         <ul>
             <h2>Guide</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci at corporis, cumque eligendi error
-                facere harum ipsam minima necessitatibus, nisi, ratione rem. Aspernatur dolore doloribus eaque modi
-                quasi reiciendis reprehenderit.</p>
+            <p>Looking for Guide for your project? Check out censusreporter.org, a really pleasant tool for
+                browsing census data. Here's the profile for Miami, FL. Scroll down to see graphs.</p>
 
-            <p>Adipisci alias amet asperiores aut consectetur distinctio dolorum ducimus error expedita, harum id iure
-                iusto laborum minima obcaecati placeat praesentium quasi quidem repudiandae saepe sit totam, ut vero,
-                vitae voluptas?</p>
+            <p>Looking for Guide for your project? Check out censusreporter.org, a really pleasant tool for
+                browsing census data. Here's the profile for Miami, FL. Scroll down to see graphs.</p>
 
         </ul>
 
@@ -223,13 +184,11 @@
         <ul>
             <h2>Organizations</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci at corporis, cumque eligendi error
-                facere harum ipsam minima necessitatibus, nisi, ratione rem. Aspernatur dolore doloribus eaque modi
-                quasi reiciendis reprehenderit.</p>
+            <p>Looking for Organizations for your project? Check out censusreporter.org, a really pleasant tool for
+                browsing census data. Here's the profile for Miami, FL. Scroll down to see graphs.</p>
 
-            <p>Adipisci alias amet asperiores aut consectetur distinctio dolorum ducimus error expedita, harum id iure
-                iusto laborum minima obcaecati placeat praesentium quasi quidem repudiandae saepe sit totam, ut vero,
-                vitae voluptas?</p>
+            <p>Looking for Organizations for your project? Check out censusreporter.org, a really pleasant tool for
+                browsing census data. Here's the profile for Miami, FL. Scroll down to see graphs.</p>
 
         </ul>
 
@@ -237,15 +196,14 @@
         <ul>
             <h2>Companies</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci at corporis, cumque eligendi error
-                facere harum ipsam minima necessitatibus, nisi, ratione rem. Aspernatur dolore doloribus eaque modi
-                quasi reiciendis reprehenderit.</p>
+            <p>Looking for Companies for your project? Check out censusreporter.org, a really pleasant tool for
+                browsing census data. Here's the profile for Miami, FL. Scroll down to see graphs.</p>
 
-            <p>Adipisci alias amet asperiores aut consectetur distinctio dolorum ducimus error expedita, harum id iure
-                iusto laborum minima obcaecati placeat praesentium quasi quidem repudiandae saepe sit totam, ut vero,
-                vitae voluptas?</p>
-
+            <p>Looking for Companies for your project? Check out censusreporter.org, a really pleasant tool for
+                browsing census data. Here's the profile for Miami, FL. Scroll down to see graphs.</p>
         </ul>
+        <ul><h2>Help with this section on <a href="https://github.com/hellenlarach/md-data">GitHub.</a> </h2></ul>
+
 
 
 
@@ -267,9 +225,11 @@
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="jquery.localScroll/demo/js/jquery.scrollTo.min.js"></script>
 <script src="jquery.localScroll/jquery.localScroll.min.js"></script>
+
 <script type="text/javascript">
     $(document).ready(function() {
         $.localScroll();
+
     });
 </script>
 </body>
